<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".home.EditProfile">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/Banner_id">
        </com.google.android.gms.ads.AdView>

        <ImageView
            android:id="@+id/profileChangeImageView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnResetImage"
            android:fontFamily="@font/playfairdisplayregular"
            android:textColor="@color/black"
            android:text="@string/defImg"/>

        <TextView
            android:id="@+id/username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfairdisplayregular"
            android:text="@string/text_username"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/changeUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="New Username"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/playfairdisplayregular"
            android:text="@string/text_password"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/confirmPassword_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/playfairdisplayregular"
            android:text="@string/text_retypePassword"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/confirmChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/playfairdisplayregular"
            android:textColor="@color/black"
            android:text="Confirm changes" />

    </LinearLayout>

</FrameLayout>