<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ProgressBar
        android:id="@+id/progressbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="131dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/text_username"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/emailText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="222dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/text_emailname"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/emailName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="255dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView_pass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="316dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/text_password"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailUser"
        app:layout_constraintVertical_bias="0.692" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="352dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView_pass3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="411dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/text_retypePassword"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailUser"
        app:layout_constraintVertical_bias="0.692" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="1dp"
        android:hint="@string/hint_user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordretype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="1dp"
        android:hint="@string/text_retypePassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordretype"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-69dp"
        android:layout_marginBottom="-31dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="Already have an account? log in" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:textColor="@color/black"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="14dp"
        android:text="@string/sign_up" />

</RelativeLayout>