<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/webinarLinearLayoutUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/pamphletDetail"
        android:layout_width="match_parent"
        android:layout_height="193dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/placeholder" />

    <TextView
        android:id="@+id/detailTitle"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pamphletDetail"
        android:fontFamily="@font/playfairdisplayregular"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#020101"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/detailSpeaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailTitle"
        android:layout_toRightOf="@id/text_detailspeaker"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/pembicara"
        android:textColor="#000000"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/text_detailspeaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailTitle"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/pembicara"
        android:textColor="#000000"
        android:textSize="25dp" />


    <TextView
        android:id="@+id/text_detaildate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailSpeaker"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/date"
        android:textColor="#000000"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/detailDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_detailspeaker"
        android:layout_toRightOf="@id/text_detaildate"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="Date"
        android:textColor="#000000"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/text_detailtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailDate"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/time"
        android:textColor="#040303"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/detailTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_detaildate"
        android:layout_toRightOf="@id/text_detaildate"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="Time"
        android:textColor="#040303"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/text_detailfee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailTime"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/fee"
        android:textColor="#020101"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/detailFee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailTime"
        android:layout_toRightOf="@id/text_detailfee"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="fee"
        android:textColor="#020101"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/text_detailcert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailFee"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/e_certificate"
        android:textColor="#0C0A0A"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/detailCert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailFee"
        android:layout_toRightOf="@id/text_detailcert"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="E-certificate"
        android:textColor="#0C0A0A"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/detailLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailCert"
        android:layout_toRightOf="@id/text_detaillink"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="Link"
        android:linksClickable="true"
        android:textColor="#050404"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/text_detaillink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailCert"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:text="@string/link"
        android:textColor="#050404"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailLink"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/playfairdisplayregular"
        android:textColor="@color/black"
        android:text="Edit" />


</RelativeLayout>